[gd_scene load_steps=3 format=3 uid="uid://d1fftfqwmjwg3"]

[ext_resource type="Script" path="res://src/level.gd" id="1_63ln3"]
[ext_resource type="PackedScene" uid="uid://ckrtfu4pci38k" path="res://src/bg.tscn" id="2_773ca"]

[node name="level" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_63ln3")

[node name="level1" type="Button" parent="."]
layout_mode = 0
offset_left = 106.0
offset_top = 66.0
offset_right = 124.0
offset_bottom = 97.0
text = "1"

[node name="level2" type="Button" parent="."]
layout_mode = 0
offset_left = 241.0
offset_top = 66.0
offset_right = 259.0
offset_bottom = 97.0
text = "2"

[node name="level3" type="Button" parent="."]
layout_mode = 0
offset_left = 364.0
offset_top = 65.0
offset_right = 382.0
offset_bottom = 96.0
text = "3"

[node name="level4" type="Button" parent="."]
layout_mode = 0
offset_left = 172.0
offset_top = 137.0
offset_right = 190.0
offset_bottom = 168.0
text = "4"

[node name="level5" type="Button" parent="."]
layout_mode = 0
offset_left = 310.0
offset_top = 136.0
offset_right = 328.0
offset_bottom = 167.0
text = "5"

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 412.0
offset_top = 190.0
offset_right = 457.0
offset_bottom = 221.0
text = "Back"

[node name="bg" parent="." instance=ExtResource("2_773ca")]

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 183.0
offset_top = 16.0
offset_right = 325.0
offset_bottom = 56.0
text = "Level selection"

[connection signal="pressed" from="level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
